# -*- sh -*-

# -------------------------------------------------
# CHANGELOG - multi-chan-fit.py
# -------------------------------------------------

# Key is:
# [+] added
# [-] removed
# [~] changed/fixed
# [V] version change
# ====================================================================


# 2017-01-25
# --------------------------------------------------------------------
# + print chi2/ndf of the total mc compared to data
#   it will need some tweaking later one...
# + now save plots to ./plots and make dir if doesn't exist
# + separate/individual plotting now works for all things!
#   The key was to have a separate canvas name for everything
#   and to Clone() the top and bottom pads - I'm super excited
#   about this awesome feature!
# V switching to 33-separate-plots.py
# + cut a new release v3.2 since things are in good shape right now
# + print bkgs and sigs activities in the legend


# 2017-01-24
# --------------------------------------------------------------------
# ~ rebuilt all backgrounds with primParticleName cut
# ~ cleaned up scaleSigs32() and scaleBkgs32() 
# ~ v32 now using scaleSigs32() and scaleBkgs32()
# + add scaleSigs32() and doesn't need data input anymore
# + add scaleBkgs32() and doesn't need data input anymore
# ~ cleaned up scaleBkgs()
# + TCut on primParticleName! This was critial to get generated
#   event count correct.


# 2017-01-23
# --------------------------------------------------------------------
# + add full path to funcs.py files so things work on the cluster
#   mainly for join.py files
# ~ throw a warning in readROOT32() if the histo isn't found
# + added in all Estella's internal bkgs numbers from spreadsheet
# + assume 1800 kg of lsveto
# + 7ppt U238 and 4ppt Th232 to backgrounds file


# 2017-01-18
# --------------------------------------------------------------------
# + command line arg for the input file in join32.py
# + add run num to backgrounds file for data items